dist/1.0/bin/sample/retrieveUnpackaged/objects/CTask__c.object
<CustomObject>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <description>Last comment added</description>
        <label>Last Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Due_Dates_Update__c</fullName>
        <description>Datetime of last invoked action Update Due Date</description>
        <inlineHelpText>Datetime of last invoked action Update Due Date</inlineHelpText>
        <label>Last Due Dates Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Owner__c</fullName>
        <label>Last Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_CBCT__c</fullName>
        <formula>HYPERLINK(MID(Value_for_Link_CBTC__c,10,61), MID(Value_for_Link_CBTC__c,89,5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to CBCT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_OCTT__c</fullName>
        <formula>if( $Organization.Id=&apos;00D200000008d5u&apos;,HYPERLINK(&quot;https://occe.gtsce.com//occe2cat/userticket/efind/SFDC/&quot; &amp; Contract_temp__c , &quot;Click here&quot;, &quot;_blank&quot;), 
HYPERLINK(&quot;https://demo.in.gtsgroup.cz/occe2cat/userticket/efind/SFDC/&quot; &amp;  Contract_temp__c , &quot;Click here&quot; , &quot;_blank&quot;))</formula>
        <label>Link to OCTT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_OSS_Id__c</fullName>
        <description>Field storing Location OSS Id used in &apos;Update OSS Location Status&apos; task.</description>
        <inlineHelpText>Field storing Location OSS Id used in &apos;Update OSS Location Status&apos; task.</inlineHelpText>
        <label>Location OSS Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Order_Comment__c</fullName>
        <label>Logistics Order Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logistics_Order_Ids__c</fullName>
        <label>Logistics Order Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRC_Monthly_Opex__c</fullName>
        <description>Monthly Opex copied from Costing Task</description>
        <inlineHelpText>Monthly Opex copied from Costing Task</inlineHelpText>
        <label>MRC Monthly Opex</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRC_One_Off_Capex__c</fullName>
        <description>One off Capex</description>
        <inlineHelpText>One off Capex</inlineHelpText>
        <label>MRC One-Off Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRC_Re_Useable_Capex__c</fullName>
        <description>MRC Re-Useable Capex</description>
        <inlineHelpText>MRC Re-Useable Capex</inlineHelpText>
        <label>MRC Re-Useable Capex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medium_OL__c</fullName>
        <description>Medium as on Order Line</description>
        <label>Medium</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Copper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre Optic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microwave</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Costs__c</fullName>
        <label>Monthly Recurring Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price__c</fullName>
        <description>Summary Recurring Cost for Customer</description>
        <inlineHelpText>Summary Recurring Cost for Customer</inlineHelpText>
        <label>Monthly Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_recurring_price_OL__c</fullName>
        <description>MRC as on OrderLine selected on Task</description>
        <formula>Order_Line__r.Monthly_recurring_price__c</formula>
        <inlineHelpText>MRC as on OrderLine selected on Task</inlineHelpText>
        <label>Monthly recurring price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRC_One_Off_Opex__c</fullName>
        <description>Transfer Pricing field NRC One Off Opex</description>
        <inlineHelpText>Transfer Pricing field NRC One Off Opex</inlineHelpText>
        <label>NRC One Off Opex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Capex__c</fullName>
        <label>Network Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Costs__c</fullName>
        <label>Non Recurring Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_OL__c</fullName>
        <description>Non Recurring Price as on OrderLine selected on Task</description>
        <formula>Order_Line__r.Non_recurring_price__c</formula>
        <inlineHelpText>Non Recurring Price as on OrderLine selected on Task</inlineHelpText>
        <label>Non Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price__c</fullName>
        <description>Summary Non Recurring Cost (Proposal)  for Customer</description>
        <inlineHelpText>Summary Non Recurring Cost (Proposal)  for Customer</inlineHelpText>
        <label>Non Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OSS_attribute_action__c</fullName>
        <description>Action on attribute for which this task has been created. Used only for &apos;Update OSS Location Status&apos; and &apos;Update OSS Circuit Status&apos; task types</description>
        <inlineHelpText>Action on attribute for which this task has been created.</inlineHelpText>
        <label>OSS attribute action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offnet_onnet__c</fullName>
        <label>Network</label>
        <picklist>
            <picklistValues>
                <fullName>OffNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnNet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Monthly_Opex__c</fullName>
        <label>Old Monthly Opex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Hold_Duration_Current__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;On Hold&apos;), NOW()-On_Hold_Started__c, 0)</formula>
        <label>On Hold Duration Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Duration_Prec__c</fullName>
        <description>Incrementally calculated after each On Hold is ended (sum of all previous OH states)</description>
        <label>On Hold Duration Prev</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Duration_Total__c</fullName>
        <description>Incrementally calculated after each On Hold is ended + Current On Hold</description>
        <formula>On_Hold_Duration_Current__c +  On_Hold_Duration_Prec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Incrementally calculated after each On Hold is ended + Current On Hold</inlineHelpText>
        <label>On Hold Duration Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Ended__c</fullName>
        <description>Date/Time when current “On Hold” has ended</description>
        <inlineHelpText>Date/Time when current “On Hold”  has ended</inlineHelpText>
        <label>On Hold Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <description>If Task put on hold then reason has to be stated.</description>
        <inlineHelpText>If Task put on hold then reason has to be stated.</inlineHelpText>
        <label>On Hold / Cancellation Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold_Started__c</fullName>
        <description>Date/Time when current “On Hold” Status has been started</description>
        <inlineHelpText>Date/Time when current “On Hold” Status has been started</inlineHelpText>
        <label>On Hold Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>Summary Opex Monthly cost of all items</description>
        <inlineHelpText>Summary Opex Monthly cost of all items</inlineHelpText>
        <label>Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off__c</fullName>
        <description>Summary Opex One-off  cost of all items</description>
        <inlineHelpText>Summary Opex One-off  cost of all items</inlineHelpText>
        <label>Opex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderLineOrderGTSLocation__c</fullName>
        <description>GTS Location from Order related to OrderLine related to current Task.</description>
        <formula>Order_Line__r.OrderLookup__r.GTS_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GTS Location from Order related to OrderLine related to current Task.</inlineHelpText>
        <label>OrderLineOrderGTSLocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderLineType__c</fullName>
        <description>Technical field formula - type of OrderLine</description>
        <formula>TEXT(Order_Line__r.Line_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OrderLine type</inlineHelpText>
        <label>OrderLineType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Billing_End_Date__c</fullName>
        <description>Parent Order Line&apos;s End Billing Date (GSDQS-55 - used for reporting)</description>
        <formula>Order_Line__r.EndBillingDate__c</formula>
        <inlineHelpText>Parent Order Line&apos;s End Billing Date</inlineHelpText>
        <label>Order Line&apos;s Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Line_Type__c</fullName>
        <description>Parent Order Line type (GSDQS-55 - used for reporting)</description>
        <formula>TEXT(Order_Line__r.Line_Type__c)</formula>
        <inlineHelpText>Parent Order Line type</inlineHelpText>
        <label>Order Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <description>Related order line</description>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PP_According_to_Plan_Due_Date__c</fullName>
        <description>Due Date according to Plan</description>
        <inlineHelpText>Due Date according to Plan</inlineHelpText>
        <label>According to Plan Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PP_According_to_Plan_Due_Datetime__c</fullName>
        <label>According to Plan Due Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_BH_Id__c</fullName>
        <label>BH Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_BH_Number__c</fullName>
        <label>BH Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_Cancel_Complete_Date__c</fullName>
        <label>Cancel Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_Complete_By_Type__c</fullName>
        <description>CompleteByType__c from related Provisioning Plan Task</description>
        <inlineHelpText>CompleteByType__c from related Provisioning Plan Task</inlineHelpText>
        <label>Complete By Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Complete_without_Acceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Manual Task should be Completed without additional creators Acceptance</description>
        <inlineHelpText>Indicates if Manual Task should be Completed without additional creators Acceptance</inlineHelpText>
        <label>Complete without Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_GC_Interval__c</fullName>
        <description>Actual interval based on completion dates</description>
        <inlineHelpText>Actual interval based on completion dates</inlineHelpText>
        <label>GC Interval</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_Interval__c</fullName>
        <description>Standard interval for this task</description>
        <inlineHelpText>Standard interval for this task</inlineHelpText>
        <label>Task Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_Override_Due_Date__c</fullName>
        <description>Override Due Date</description>
        <inlineHelpText>Override Due Date</inlineHelpText>
        <label>Override Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PP_Plan_Standard_Interval__c</fullName>
        <description>Copy of provisioning plan standard interval. Store here so we do not need to modify every single object related to this task</description>
        <inlineHelpText>Copy of provisioning plan standard interval</inlineHelpText>
        <label>Plan Standard Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_Provisioning_Plan_Sequence__c</fullName>
        <description>Sequence for Provisioning Plan</description>
        <inlineHelpText>Sequence for Provisioning Plan</inlineHelpText>
        <label>Provisioning Plan Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_Provisioning_Plan_Task_Id__c</fullName>
        <description>Task Id of Provisioning Plan</description>
        <externalId>true</externalId>
        <inlineHelpText>Task Id of Provisioning Plan</inlineHelpText>
        <label>Provisioning Plan Task Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Received_Date__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_Restart_Counter__c</fullName>
        <description>Restart Counter</description>
        <inlineHelpText>Restart Counter</inlineHelpText>
        <label>Restart Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_SLA_Type__c</fullName>
        <description>Type of SLA</description>
        <inlineHelpText>Type of SLA</inlineHelpText>
        <label>SLA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PP_Task_Completed__c</fullName>
        <label>Task Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_Task_Done__c</fullName>
        <label>Task Done</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_Task_Start_Date__c</fullName>
        <label>Plan Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_Workflow__c</fullName>
        <description>Workflow</description>
        <externalId>true</externalId>
        <inlineHelpText>Workflow</inlineHelpText>
        <label>Workflow</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Workgroup_ID__c</fullName>
        <description>ID of Workgroup</description>
        <inlineHelpText>ID of Workgroup</inlineHelpText>
        <label>Workgroup ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Circuit_ID__c</fullName>
        <label>Parent Circuit ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payback_Months__c</fullName>
        <description>(Total Capex + Opex One-off - Non Recurring Price) ÷ (Recurring Price – Opex monthly)</description>
        <formula>(Total_Capex__c +  Opex_One_off__c  -  Non_Recurring_Price__c ) / ( Monthly_Recurring_Price__c  -  Opex_Monthly__c )</formula>
        <inlineHelpText>(Total Capex + Opex One-off - Non Recurring Price) ÷ (Recurring Price – Opex monthly)</inlineHelpText>
        <label>Payback [Months]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_B__c</fullName>
        <formula>If(Request__r.Technical_Contact_Phone_B__c !=&apos;&apos; ,Request__r.Technical_Contact_Phone_B__c,If(B_End__r.Phone__c  !=&apos;&apos; ,B_End__r.Phone__c , Request__r.Technical_Contact_Mobile_B__c ))</formula>
        <label>Phone B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedDelivery__c</fullName>
        <description>Planned Delivery</description>
        <inlineHelpText>If PD is empty or equals DD it should change along with DD; otherwise will be set manually by execution party during delivery.</inlineHelpText>
        <label>Planned Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Billing_Configruation_End_Date__c</fullName>
        <label>Planned Billing Configruation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Billing_Configruation_Start_Date__c</fullName>
        <label>Planned Billing Configruation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Deinstalation_Date__c</fullName>
        <label>Planned De-instalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Delivery_DateTime__c</fullName>
        <description>Planned Delivery</description>
        <label>Planned Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Delivery_Date__c</fullName>
        <description>OrderLine Planned Delivery Date</description>
        <formula>Order_Line__r.PlannedDeliveryDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Planned Delivery Date from related OrderLine</inlineHelpText>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Disconnection_Date__c</fullName>
        <label>Planned Disconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Installation_Date__c</fullName>
        <description>Planned installation date after disconnection</description>
        <inlineHelpText>Planned installation date after disconnection</inlineHelpText>
        <label>Planned Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Provisioning_End_Date__c</fullName>
        <description>Date to be provided by Provisioning.</description>
        <inlineHelpText>Date to be provided by Provisioning.</inlineHelpText>
        <label>Planned Provisioning End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Provisioning_Start_Date__c</fullName>
        <description>Date to be provided by Provisioning.</description>
        <inlineHelpText>Date to be provided by Provisioning.</inlineHelpText>
        <label>Planned Provisioning Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Task_Actual__c</fullName>
        <description>Date when previous task was actually completed</description>
        <inlineHelpText>Date when previous task was actually completed</inlineHelpText>
        <label>Previous Task Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Task_Planned__c</fullName>
        <description>Date when previous task is planned to be completed</description>
        <inlineHelpText>Date when previous task is planned to be completed</inlineHelpText>
        <label>Previous Task Planned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Task__c</fullName>
        <description>Task that should be completed before this one can start</description>
        <inlineHelpText>Task that should be completed before this one can start</inlineHelpText>
        <label>Previous Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Tasks (Previous Task)</relationshipLabel>
        <relationshipName>Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Duration_No_OH__c</fullName>
        <description>On Hold Duration excluded = Processing Duration - On Hold Duration</description>
        <formula>IF(IF( ISPICKVAL( Status__c , &apos;On Hold&apos;), Processing_Duration__c, Processing_Duration__c - On_Hold_Duration_Total__c) &lt; 0, Processing_Duration__c, IF( ISPICKVAL( Status__c , &apos;On Hold&apos;), Processing_Duration__c, Processing_Duration__c - On_Hold_Duration_Total__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Duration (No OH)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Duration__c</fullName>
        <description>Finished Date - Accepted Date</description>
        <formula>IF(IF( 
   ISNULL(Finshed_Date__c), 
   IF(ISNULL(Closed_Date__c) , LastModifiedDate , Closed_Date__c ),
   Finshed_Date__c ) - IF(ISNULL(Accepted_Date__c), CreatedDate, Accepted_Date__c) &lt; 0, 0, IF( 
   ISNULL(Finshed_Date__c), 
   IF(ISNULL(Closed_Date__c) , LastModifiedDate , Closed_Date__c ),
   Finshed_Date__c ) - IF(ISNULL(Accepted_Date__c), CreatedDate, Accepted_Date__c))</formula>
        <inlineHelpText>Finished Date - Accepted Date</inlineHelpText>
        <label>Processing Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name_TXT__c</fullName>
        <description>Field used to store Product Name in plain text format used in E-mail Notification templates</description>
        <formula>Request__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field used to store Product Name in plain text format used in E-mail Notification templates</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +Request__r.Product__r.Id , Request__r.Product__r.Name , &quot;_top&quot;)</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Revenue__c</fullName>
        <description>NRP + MRP * Contract Length</description>
        <formula>Non_Recurring_Price__c  + Monthly_Recurring_Price__c  *  Contract_Length__c</formula>
        <inlineHelpText>NRP + MRP * Contract Length</inlineHelpText>
        <label>Proposal Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provisioning_Start_from_Order__c</fullName>
        <formula>Order_Line__r.OrderLookup__r.PlannedProvisioningStart__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provisioning Start from Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QoS__c</fullName>
        <description>QoS</description>
        <inlineHelpText>QoS</inlineHelpText>
        <label>QoS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QoS_specification__c</fullName>
        <description>QoS specification</description>
        <inlineHelpText>QoS specification</inlineHelpText>
        <label>QoS specification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queue_Assignee__c</fullName>
        <label>Assign to Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Off-net Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing RO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_Transfer_MRC__c</fullName>
        <description>Contains final Transfer MRC Price after referr.</description>
        <inlineHelpText>Contains final Transfer MRC Price after referr.</inlineHelpText>
        <label>Referred Transfer MRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_Transfer_NRC__c</fullName>
        <description>Contains final Transfer NRC Price after referr.</description>
        <inlineHelpText>Contains final Transfer NRC Price after referr.</inlineHelpText>
        <label>Referred Transfer NRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <description>Field stores Region Name retireved from OSS through GET TASKS FROM OSS functionality. [PROV]_PL_008: Geografical Task assigning to Queues</description>
        <inlineHelpText>Region Name retrieved from OSS</inlineHelpText>
        <label>Region Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Opportunity__c</fullName>
        <label>Regional Opportunity</label>
        <referenceTo>Regional_Opportunity__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_Task__c</fullName>
        <description>Relation to Opportunity Task</description>
        <inlineHelpText>Relation to Opportunity Task</inlineHelpText>
        <label>Related Opportunity Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Related Request Tasks</relationshipLabel>
        <relationshipName>Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_order__c</fullName>
        <label>Related Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remind_days__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>How many days before due date the reminder should be sent?</inlineHelpText>
        <label>Remind days before</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If check an automatic reminder will generate before due date when Task is not finished</description>
        <inlineHelpText>If check an automatic reminder will generate before due date when Task is not finished</inlineHelpText>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_date__c</fullName>
        <formula>Due_Date__c - Remind_days__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_info__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Request_Id__c, &apos;Go to Request&apos;, &apos;_top&apos;)</formula>
        <label>Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restarted_from_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if task was restarted from &apos;Completed&apos; status</description>
        <inlineHelpText>Indicates if task was restarted from &apos;Completed&apos; status</inlineHelpText>
        <label>Restarted from Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Router_Specification__c</fullName>
        <description>Router Specification</description>
        <inlineHelpText>Router Specification</inlineHelpText>
        <label>Router Specification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Bandwidth__c</fullName>
        <description>Bandwidth selected by Customer</description>
        <inlineHelpText>Bandwidth selected by Customer</inlineHelpText>
        <label>Bandwidth</label>
        <length>120</length>
        <type>Text</type>
    </fields>
</CustomObject>